# COMP_ALYZ

./: .gitignore  README.md  check1.py  check2.py  check3.py  check_chunk_newline.py  env_test.py  example_config.yaml  pyproject.toml  repo-backup.bundle  requirements.txt
MasterlistsLVcsv/: LV_BEVmasterlist.csv  LV_MCAPHEVmasterlist.csv
examples/: config.example.yaml
pvvp/: L03_normalize.py  L04_chunker.py  L06_mapper.py  L06_mapper_review.py  L06_semantic_pass.py  L07_merge.py  L08_validate_yn.py  L09_export_positives.py  L10_export_csv.py  L12_budget.py  L13_summary_finalize.py  __init__.py  cli.py  config.py  constants.py  env_test.py  io.py  main_orchestrator.py  make_derived_lists.py  secret_utils.py  session.py  temp_utils.py  textnorm.py  ui_review.py
pvvp/common/: env_setup.py
pvvp/config/: mapper_preset.json  synonyms_juke.json
pvvp/exports/MCAFHEV/: detections_MCAFHEV.csv
pvvp/prompts/: semantic_mapper_system_lv.md  semantic_mapper_user_lv.md  strict_mapper_system_lv.md  strict_mapper_user_lv.md
pvvp/sessions/20250827-021107-9016/: summary.txt
pvvp/sessions/BEV/: LV_BEVPVVP.txt  budget_report.json  chunks.jsonl  input_raw.txt  mapper_all.json  mapper_chunk_1.json  mapper_chunk_2.json  mapper_debug.txt  summary.txt  (+1 more)
pvvp/tests/: test_merge.py
pvvp/webapp/: api.py
pvvp_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pvvp_ui/backend/: Untitled-1.txt  from fastapi.middleware.cors import CORS.cors import CORS.cors import CORS  main.py  settings.py
pvvp_ui/frontend/: package-lock.json
tools/: check_env.py
(+41 files in other folders)
